force-app/main/default/objects/Cart__c/Cart__c.object-meta.xml
<CustomObject>
    <description>Shopping Cart used in the Experience Site</description>
    <label>Cart</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Cart Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>