force-app/main/default/objects/Cart__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>