force-app/main/default/objects/Cart__c/fields/Program_Session__c.field-meta.xml
<CustomField>
    <fullName>Program_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Session</label>
    <referenceTo>Program_Session__c</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>