force-app/main/default/objects/Cart__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>