force-app/main/default/objects/Cart__c/fields/Stripe_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Transaction Id</label>
    <length>84</length>
    <type>Text</type>
</CustomField>