force-app/main/default/objects/Cart__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>Cart_Product__c.Total__c</summarizedField>
    <summaryForeignKey>Cart_Product__c.Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>