force-app/main/default/objects/Cart__c/recordTypes/Shop.recordType-meta.xml
<RecordType>
    <fullName>Shop</fullName>
    <active>true</active>
    <label>Shop</label>
</RecordType>